# logistica_bpt

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json  proxy.ts
app/: globals.css
app/(auth)/login/: page.tsx
app/(main)/: layout.tsx
app/(main)/analisis-bpt/: page.tsx
app/(main)/configuracion/: page.tsx
app/(main)/dashboard/: page.tsx
app/(main)/inventario/: page.tsx
app/(main)/operador/: page.tsx
app/(main)/ordenes-produccion/: page.tsx
app/(main)/reportes/: page.tsx
app/(main)/subir-archivo/: page.tsx
app/(main)/ubicacion-produccion/: page.tsx
app/actions/: auth.ts  ordenes.ts
app/api/analisis-bpt/consolidacion/: route.ts
app/api/analisis-bpt/plan/: route.ts
app/api/consolidacion-diaria/: route.ts
app/api/consolidacion-extrema/: route.ts
app/api/plan-ubicacion/: route.ts
app/api/test-zona/: route.ts
app/api/upload-preview/: route.ts
backend/: main.py  pyproject.toml  start.sh
backend/core/: config.py  deps.py  supabase.py
backend/routers/: auth.py  consolidacion.py  lineas.py  localizadores.py  plan.py  upload.py
components/layout/: Sidebar.tsx
lib/hooks/: useIsMobile.ts
lib/shared/: ordenes.ts
lib/supabase/: browser.ts
lib/utils/: debounce.ts
sql/: SETUP_INVENTORY.md  diagnose_inventory.sql  indices.sql  load_inventory_data.sql  schema.sql
sql/migrations/: 002_inventario.sql  003_inventario_extended.sql
